@@ -39,6 +39,8 @@ import org.junit.Assert;
 import static com.microsoft.identity.client.ui.automation.utils.CommonUtils.FIND_UI_ELEMENT_TIMEOUT;
 import static org.junit.Assert.fail;
 
+import android.widget.Button;
+
 import java.util.concurrent.TimeUnit;
 
 /**
@@ -50,6 +52,7 @@ public class AadLoginComponentHandler implements IMicrosoftStsLoginComponentHand
 
     public final static String ACCOUNT_PICKER_DID_NOT_APPEAR_ERROR = "Account picker screen did not show up";
 
+    public final static String SIGN_IN_FROM_OTHER_DEVICE = "Sign in from another device";
     private final long mFindLoginUiElementTimeout;
 
     public AadLoginComponentHandler() {
@@ -222,6 +225,25 @@ public class AadLoginComponentHandler implements IMicrosoftStsLoginComponentHand
         // Looks like we sometimes see this UI prompt asking "How would like to sign in?"
         // We press button1, which is "Ok" to confirm the default selection of using device certificate.
         UiAutomatorUtils.handleButtonClickSafely("android:id/button1", mFindLoginUiElementTimeout);
+    }
+
+    @Override
+    public void handleSignInFromOtherDevice(@NonNull final String expectedDeviceLoginUrl) {
+        this.handleSignInOptions();
+        UiAutomatorUtils.handleButtonClickForObjectWithText(SIGN_IN_FROM_OTHER_DEVICE);
+
+        // verify the remote device login url is displayed.
+        Assert.assertTrue(UiAutomatorUtils.obtainUiObjectWithText(expectedDeviceLoginUrl).exists());
+    }
+
+    @Override
+    public void handleSignInOptions() {
+        final UiObject signInOptions = UiAutomatorUtils.obtainUiObjectWithTextAndClassType("Sign-in options", Button.class);
+        try {
+            signInOptions.click();
+        } catch (final UiObjectNotFoundException e) {
+            throw new AssertionError(e);
+        }
     }
 
     @Override
