@@ -22,6 +22,8 @@
 //  THE SOFTWARE.
 package com.microsoft.identity.client.ui.automation.interaction.microsoftsts;
 
+import androidx.annotation.NonNull;
+
 import com.microsoft.identity.client.ui.automation.interaction.IOAuth2LoginComponentHandler;
 import com.microsoft.identity.client.ui.automation.interaction.UiResponse;
 
@@ -82,4 +84,16 @@ public interface IMicrosoftStsLoginComponentHandler extends IOAuth2LoginComponen
      * Handle the How would you like to sign in page.
      */
     void handleHowWouldYouLikeToSignIn();
+
+    /**
+     * Handle interaction for "Sign in from other device".
+     * @param expectedDeviceLoginUrl the expected remote login url when "Sign in from other device" option is
+     *                               exercised.
+     */
+    void handleSignInFromOtherDevice(@NonNull final String expectedDeviceLoginUrl);
+
+    /**
+     * Handle interaction with "Sign in options".
+     */
+    void handleSignInOptions();
 }
